# BiocHubsAPI

./: .dockerignore  .gitignore  API_USAGE.md  DATABASE_SETUP.md  Dockerfile  Makefile  POSTGRES_SCHEMA_DESIGN.md  README.md  justfile  mirror_ah_to_postgres.py  postgres_schema.csv  pyproject.toml  sqlalchemy_models.py
.claude/: context.md  guidelines.md
k8s/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  secret.yaml
src/hubs_api/: __init__.py  api.py  api_v2.py  cli.py  db.py  db_utils.py  migrate.py  mirror.py  models.py  pydantic_models.py  schemas.py
