[project]
name = "api1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.0.0",
]
