[project]
name = "hubs_api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "click>=8.3.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
hubs-api = "hubs_api.cli:cli"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"